--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>REDACTED</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel="stylesheet" href="styles.css">
-    <script type='module' defer src="index.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <script defer src='index.js'></script>
 </head>
 <body>
-    <div>hello world</div>
+    <header>
+        <div id="hero">
+            <h1>REDACTED</h1>
+        </div>
+        <nav>
+            <button id="homeBtn">Home</button>
+            <button id="podcastsBtn">Podcasts</button>
+            <button id="hearingsBtn">Hearings</button>
+            <button id="encountersBtn">Encounters</button>
+            <button id="booksBtn">Books</button>
+            <button id="documentariesBtn">Documentaries</button>
+            <button id="moviesBtn">Movies</button>
+            <button id="gamesBtn">Games</button>
+
+
+
+        </nav>
+    </header>
+    <div id="content">
+        Welcome to the NHI Guidebook.
+        <br>
+        <br>
+        This is a hobby project in response to the overwhelming amount of evidence and content available online.
+        As I find myself keeping up with recent major developments and disclosures, I realized that a "guidebook", a way to navigate the massive landscape of discussions surrounding the topic, could be of great use for me and for others.
+        <br>
+        <br>
+        My aim is to provide an all-encompassing approach of listing content across the different media types:
+        <ul>
+            <li><strong>Podcasts:</strong> Likely the most common and far reaching medium.</li>
+            <li><strong>Congressional Hearings:</strong> Recent hearings that have been monumental in the disclosure of major programs.</li>
+            <li><strong>Close Encounters:</strong> The first, second, and <i>third</i> kind.</li>
+            <li><strong>Books:</strong> Books that are commonly referenced.</li>
+            <li><strong>Documentaries:</strong> Non-fiction films documenting knowledge we have so far.</li>
+            <li><strong>Movies:</strong> Fictional films that might not be so fictional after all.</li>
+            <li><strong>Games:</strong> Games that spark your imagination.</li>
+        </ul>
+    </div>
+    <div class="footer">
+        &copy; 2025 Erik Grinn
+    </div>
 </body>
 </html>
