--- a/src/template.html
+++ b/src/template.html
@@ -47,7 +47,12 @@
         </ul>
     </div>
     <div class="footer">
-        &copy; 2025 Erik Grinn
+        <!-- hopefully script below doesn't interfere with anything else? -->
+        <script>
+            const copyrightDate = new Date();
+            document.write('&copy;' + copyrightDate.getFullYear() + ' Erik Grinn');
+        </script>
+        <!-- &copy; 2025 Erik Grinn -->
     </div>
 </body>
 </html>
