--- a/src/template.html
+++ b/src/template.html
@@ -22,30 +22,9 @@
             <button id="documentariesBtn">Documentaries</button>
             <button id="moviesBtn">Movies</button>
             <button id="gamesBtn">Games</button>
-
-
-
         </nav>
     </header>
-    <div id="content">
-        Welcome to the NHI Guidebook.
-        <br>
-        <br>
-        This is a hobby project in response to the overwhelming amount of evidence and content available online.
-        As I find myself keeping up with recent major developments and disclosures, I realized that a "guidebook", a way to navigate the massive landscape of discussions surrounding the topic, could be of great use for me and for others.
-        <br>
-        <br>
-        My aim is to provide an all-encompassing approach of listing content across the different media types:
-        <ul>
-            <li><strong>Podcasts:</strong> Likely the most common and far reaching medium.</li>
-            <li><strong>Congressional Hearings:</strong> Recent hearings that have been monumental in the disclosure of major programs.</li>
-            <li><strong>Close Encounters:</strong> The first, second, and <i>third</i> kind.</li>
-            <li><strong>Books:</strong> Books that are commonly referenced.</li>
-            <li><strong>Documentaries:</strong> Non-fiction films documenting knowledge we have so far.</li>
-            <li><strong>Movies:</strong> Fictional films that might not be so fictional after all.</li>
-            <li><strong>Games:</strong> Games that spark your imagination.</li>
-        </ul>
-    </div>
+    <div id="content"></div>
     <div class="footer">
         <!-- hopefully script below doesn't interfere with anything else? -->
         <script>
