nav-button class names, semi-functional abduction

--- a/src/template.html
+++ b/src/template.html
@@ -14,14 +14,14 @@
             <h1>REDACTED</h1>
         </div>
         <nav>
-            <button id="homeBtn">Home</button>
-            <button id="podcastsBtn">Podcasts</button>
-            <button id="hearingsBtn">Hearings</button>
-            <button id="encountersBtn">Encounters</button>
-            <button id="booksBtn">Books</button>
-            <button id="documentariesBtn">Documentaries</button>
-            <button id="moviesBtn">Movies</button>
-            <button id="gamesBtn">Games</button>
+            <button id="homeBtn" class="nav-button">Home</button>
+            <button id="podcastsBtn" class="nav-button">Podcasts</button>
+            <button id="hearingsBtn" class="nav-button">Hearings</button>
+            <button id="encountersBtn" class="nav-button">Encounters</button>
+            <button id="booksBtn" class="nav-button">Books</button>
+            <button id="documentariesBtn" class="nav-button">Documentaries</button>
+            <button id="moviesBtn" class="nav-button">Movies</button>
+            <button id="gamesBtn" class="nav-button">Games</button>
         </nav>
     </header>
     <div id="content"></div>
