chart-geo working, but options seems not working

--- a/src/template.html
+++ b/src/template.html
@@ -25,6 +25,9 @@
         </nav>
     </header>
     <div id="content"></div>
+    <!-- <div id="output-container"> -->
+        <canvas id="output"></canvas>
+    <!-- </div> -->
     <div class="footer">
         <!-- hopefully script below doesn't interfere with anything else? -->
         <script>
