changed footer class to dedicated footer tag

--- a/src/template.html
+++ b/src/template.html
@@ -25,13 +25,13 @@
         </nav>
     </header>
     <div id="content"></div>
-    <div class="footer">
+    <footer>
         <!-- hopefully script below doesn't interfere with anything else? -->
         <script>
             const copyrightDate = new Date();
             document.write('&copy;' + copyrightDate.getFullYear() + ' Erik Grinn');
         </script>
         <!-- &copy; 2025 Erik Grinn -->
-    </div>
+    </footer>
 </body>
 </html>
