added notes tab

--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,7 @@
             <button id="documentariesBtn" class="nav-button">Documentaries</button>
             <button id="moviesBtn" class="nav-button">Movies</button>
             <button id="gamesBtn" class="nav-button">Games</button>
+            <button id="notesBtn" class="nav-button">Notes</button>
         </nav>
     </header>
     <div id="content"></div>
